compiler/testData/diagnostics/tests/secondaryConstructors/constructorInTrait.kt
// RUN_PIPELINE_TILL: FRONTEND
// FIR_IDENTICAL
interface A {
    <!CONSTRUCTOR_IN_INTERFACE!>constructor()<!>
}

/* GENERATED_FIR_TAGS: interfaceDeclaration, secondaryConstructor */
